# Constellation

./: .gitignore  pyproject.toml
data/D/: r
python/constellation/satellites/: meson.build
python/constellation/satellites/ETROC2Classic/: ETROC2Classic.py  README.md  __main__.py  command_interpret.py  daq_helpers.py  meson.build
python/constellation/satellites/ETROC2Receiver/: ETROC2Receiver.py  README.md  __main__.py  meson.build
