# SPDX-FileCopyrightText: 2024 DESY and the Constellation authors
# SPDX-License-Identifier: CC0-1.0

example_sat_files = files(
  '__main__.py',
  'ETROC2Receiver.py',
  'command_interpret.py',
  'daq_helpers.py'
)

py.install_sources(example_sat_files,
  subdir: 'constellation/satellites/ETROC2Receiver')
